Move wrapper margin to .editor writing flow to avoid having to override the top padding of the editor frame.
This top-padding override was introduced in #565, and was previously required to make sure the permalink hover state wasn't cut off. This workaround is no longer required if we're removing the overflow rule entirely.

--- a/style-editor.scss
+++ b/style-editor.scss
@@ -31,11 +31,6 @@ body {
 	}
 
 	@include media(mobile) {
-		padding-top: 0;
-
-		.editor-writing-flow {
-			padding-top: 50px;
-		}
 
 		.wp-block[data-align="full"] {
 			position: relative;
@@ -45,8 +40,7 @@ body {
 
 	@include media(tablet) {
 
-		.editor-block-list__layout,
-		.editor-post-title {
+		.editor-writing-flow {
 			max-width: 80%;
 			margin: 0 10%;
 		}
